// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyboard nav ux highlights closest time to now when an unselected list is opened 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.25rem;
}

.c0 {
  color: #343C42;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  font-size: 0.875rem;
  cursor: default;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: grid;
  grid-gap: 0.25rem;
  grid-template-columns: 1rem 1fr;
  outline: none;
}

.c0[aria-selected='true'] {
  background-color: #F3F2FF;
  color: #412399;
}

<li
  aria-selected="true"
  class="c0"
  display="flex"
  font-size="small"
  id="45995089"
  px="xsmall"
  py="xxsmall"
  role="option"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <span
    class=""
  >
    06:30 am
  </span>
</li>
`;

exports[`keyboard nav ux highlights closest time to selected value when list is opened but value does not match provided options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.25rem;
}

.c0 {
  color: #343C42;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  font-size: 0.875rem;
  cursor: default;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: grid;
  grid-gap: 0.25rem;
  grid-template-columns: 1rem 1fr;
  outline: none;
}

.c0[aria-selected='true'] {
  background-color: #F3F2FF;
  color: #412399;
}

<li
  aria-selected="true"
  class="c0"
  display="flex"
  font-size="small"
  id="46918646"
  px="xsmall"
  py="xxsmall"
  role="option"
  tabindex="-1"
>
  <div
    class="c1"
  />
  <span
    class=""
  >
    04:45 pm
  </span>
</li>
`;

exports[`keyboard nav ux highlights selected value when list is opened 1`] = `
.c2 {
  margin-right: 0;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1.25rem;
}

.c0 {
  color: #343C42;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  font-size: 0.875rem;
  cursor: default;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: grid;
  grid-gap: 0.25rem;
  grid-template-columns: 1rem 1fr;
  outline: none;
}

.c0[aria-selected='true'] {
  background-color: #F3F2FF;
  color: #412399;
}

<li
  aria-selected="true"
  class="c0"
  display="flex"
  font-size="small"
  id="46858971"
  px="xsmall"
  py="xxsmall"
  role="option"
  tabindex="-1"
>
  <div
    class="c1"
  >
    <div
      class="c2 "
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Check
        </title>
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class=""
  >
    02:15 pm
  </span>
</li>
`;

exports[`prop: format formats options in 12 hour time 1`] = `
Array [
  "12:00 am",
  "12:15 am",
  "12:30 am",
  "12:45 am",
  "01:00 am",
  "01:15 am",
  "01:30 am",
  "01:45 am",
  "02:00 am",
  "02:15 am",
  "02:30 am",
  "02:45 am",
  "03:00 am",
  "03:15 am",
  "03:30 am",
  "03:45 am",
  "04:00 am",
  "04:15 am",
  "04:30 am",
  "04:45 am",
  "05:00 am",
  "05:15 am",
  "05:30 am",
  "05:45 am",
  "06:00 am",
  "06:15 am",
  "06:30 am",
  "06:45 am",
  "07:00 am",
  "07:15 am",
  "07:30 am",
  "07:45 am",
  "08:00 am",
  "08:15 am",
  "08:30 am",
  "08:45 am",
  "09:00 am",
  "09:15 am",
  "09:30 am",
  "09:45 am",
  "10:00 am",
  "10:15 am",
  "10:30 am",
  "10:45 am",
  "11:00 am",
  "11:15 am",
  "11:30 am",
  "11:45 am",
  "12:00 pm",
  "12:15 pm",
  "12:30 pm",
  "12:45 pm",
  "01:00 pm",
  "01:15 pm",
  "01:30 pm",
  "01:45 pm",
  "02:00 pm",
  "02:15 pm",
  "02:30 pm",
  "02:45 pm",
  "03:00 pm",
  "03:15 pm",
  "03:30 pm",
  "03:45 pm",
  "04:00 pm",
  "04:15 pm",
  "04:30 pm",
  "04:45 pm",
  "05:00 pm",
  "05:15 pm",
  "05:30 pm",
  "05:45 pm",
  "06:00 pm",
  "06:15 pm",
  "06:30 pm",
  "06:45 pm",
  "07:00 pm",
  "07:15 pm",
  "07:30 pm",
  "07:45 pm",
  "08:00 pm",
  "08:15 pm",
  "08:30 pm",
  "08:45 pm",
  "09:00 pm",
  "09:15 pm",
  "09:30 pm",
  "09:45 pm",
  "10:00 pm",
  "10:15 pm",
  "10:30 pm",
  "10:45 pm",
  "11:00 pm",
  "11:15 pm",
  "11:30 pm",
  "11:45 pm",
]
`;

exports[`prop: format formats options in 24 hour time 1`] = `
Array [
  "00:00",
  "00:15",
  "00:30",
  "00:45",
  "01:00",
  "01:15",
  "01:30",
  "01:45",
  "02:00",
  "02:15",
  "02:30",
  "02:45",
  "03:00",
  "03:15",
  "03:30",
  "03:45",
  "04:00",
  "04:15",
  "04:30",
  "04:45",
  "05:00",
  "05:15",
  "05:30",
  "05:45",
  "06:00",
  "06:15",
  "06:30",
  "06:45",
  "07:00",
  "07:15",
  "07:30",
  "07:45",
  "08:00",
  "08:15",
  "08:30",
  "08:45",
  "09:00",
  "09:15",
  "09:30",
  "09:45",
  "10:00",
  "10:15",
  "10:30",
  "10:45",
  "11:00",
  "11:15",
  "11:30",
  "11:45",
  "12:00",
  "12:15",
  "12:30",
  "12:45",
  "13:00",
  "13:15",
  "13:30",
  "13:45",
  "14:00",
  "14:15",
  "14:30",
  "14:45",
  "15:00",
  "15:15",
  "15:30",
  "15:45",
  "16:00",
  "16:15",
  "16:30",
  "16:45",
  "17:00",
  "17:15",
  "17:30",
  "17:45",
  "18:00",
  "18:15",
  "18:30",
  "18:45",
  "19:00",
  "19:15",
  "19:30",
  "19:45",
  "20:00",
  "20:15",
  "20:30",
  "20:45",
  "21:00",
  "21:15",
  "21:30",
  "21:45",
  "22:00",
  "22:15",
  "22:30",
  "22:45",
  "23:00",
  "23:15",
  "23:30",
  "23:45",
]
`;

exports[`prop: interval renders 5-minute intervals 1`] = `
Array [
  "12:00 am",
  "12:05 am",
  "12:10 am",
  "12:15 am",
  "12:20 am",
  "12:25 am",
  "12:30 am",
  "12:35 am",
  "12:40 am",
  "12:45 am",
  "12:50 am",
  "12:55 am",
  "01:00 am",
  "01:05 am",
  "01:10 am",
  "01:15 am",
  "01:20 am",
  "01:25 am",
  "01:30 am",
  "01:35 am",
  "01:40 am",
  "01:45 am",
  "01:50 am",
  "01:55 am",
  "02:00 am",
  "02:05 am",
  "02:10 am",
  "02:15 am",
  "02:20 am",
  "02:25 am",
  "02:30 am",
  "02:35 am",
  "02:40 am",
  "02:45 am",
  "02:50 am",
  "02:55 am",
  "03:00 am",
  "03:05 am",
  "03:10 am",
  "03:15 am",
  "03:20 am",
  "03:25 am",
  "03:30 am",
  "03:35 am",
  "03:40 am",
  "03:45 am",
  "03:50 am",
  "03:55 am",
  "04:00 am",
  "04:05 am",
  "04:10 am",
  "04:15 am",
  "04:20 am",
  "04:25 am",
  "04:30 am",
  "04:35 am",
  "04:40 am",
  "04:45 am",
  "04:50 am",
  "04:55 am",
  "05:00 am",
  "05:05 am",
  "05:10 am",
  "05:15 am",
  "05:20 am",
  "05:25 am",
  "05:30 am",
  "05:35 am",
  "05:40 am",
  "05:45 am",
  "05:50 am",
  "05:55 am",
  "06:00 am",
  "06:05 am",
  "06:10 am",
  "06:15 am",
  "06:20 am",
  "06:25 am",
  "06:30 am",
  "06:35 am",
  "06:40 am",
  "06:45 am",
  "06:50 am",
  "06:55 am",
  "07:00 am",
  "07:05 am",
  "07:10 am",
  "07:15 am",
  "07:20 am",
  "07:25 am",
  "07:30 am",
  "07:35 am",
  "07:40 am",
  "07:45 am",
  "07:50 am",
  "07:55 am",
  "08:00 am",
  "08:05 am",
  "08:10 am",
  "08:15 am",
  "08:20 am",
  "08:25 am",
  "08:30 am",
  "08:35 am",
  "08:40 am",
  "08:45 am",
  "08:50 am",
  "08:55 am",
  "09:00 am",
  "09:05 am",
  "09:10 am",
  "09:15 am",
  "09:20 am",
  "09:25 am",
  "09:30 am",
  "09:35 am",
  "09:40 am",
  "09:45 am",
  "09:50 am",
  "09:55 am",
  "10:00 am",
  "10:05 am",
  "10:10 am",
  "10:15 am",
  "10:20 am",
  "10:25 am",
  "10:30 am",
  "10:35 am",
  "10:40 am",
  "10:45 am",
  "10:50 am",
  "10:55 am",
  "11:00 am",
  "11:05 am",
  "11:10 am",
  "11:15 am",
  "11:20 am",
  "11:25 am",
  "11:30 am",
  "11:35 am",
  "11:40 am",
  "11:45 am",
  "11:50 am",
  "11:55 am",
  "12:00 pm",
  "12:05 pm",
  "12:10 pm",
  "12:15 pm",
  "12:20 pm",
  "12:25 pm",
  "12:30 pm",
  "12:35 pm",
  "12:40 pm",
  "12:45 pm",
  "12:50 pm",
  "12:55 pm",
  "01:00 pm",
  "01:05 pm",
  "01:10 pm",
  "01:15 pm",
  "01:20 pm",
  "01:25 pm",
  "01:30 pm",
  "01:35 pm",
  "01:40 pm",
  "01:45 pm",
  "01:50 pm",
  "01:55 pm",
  "02:00 pm",
  "02:05 pm",
  "02:10 pm",
  "02:15 pm",
  "02:20 pm",
  "02:25 pm",
  "02:30 pm",
  "02:35 pm",
  "02:40 pm",
  "02:45 pm",
  "02:50 pm",
  "02:55 pm",
  "03:00 pm",
  "03:05 pm",
  "03:10 pm",
  "03:15 pm",
  "03:20 pm",
  "03:25 pm",
  "03:30 pm",
  "03:35 pm",
  "03:40 pm",
  "03:45 pm",
  "03:50 pm",
  "03:55 pm",
  "04:00 pm",
  "04:05 pm",
  "04:10 pm",
  "04:15 pm",
  "04:20 pm",
  "04:25 pm",
  "04:30 pm",
  "04:35 pm",
  "04:40 pm",
  "04:45 pm",
  "04:50 pm",
  "04:55 pm",
  "05:00 pm",
  "05:05 pm",
  "05:10 pm",
  "05:15 pm",
  "05:20 pm",
  "05:25 pm",
  "05:30 pm",
  "05:35 pm",
  "05:40 pm",
  "05:45 pm",
  "05:50 pm",
  "05:55 pm",
  "06:00 pm",
  "06:05 pm",
  "06:10 pm",
  "06:15 pm",
  "06:20 pm",
  "06:25 pm",
  "06:30 pm",
  "06:35 pm",
  "06:40 pm",
  "06:45 pm",
  "06:50 pm",
  "06:55 pm",
  "07:00 pm",
  "07:05 pm",
  "07:10 pm",
  "07:15 pm",
  "07:20 pm",
  "07:25 pm",
  "07:30 pm",
  "07:35 pm",
  "07:40 pm",
  "07:45 pm",
  "07:50 pm",
  "07:55 pm",
  "08:00 pm",
  "08:05 pm",
  "08:10 pm",
  "08:15 pm",
  "08:20 pm",
  "08:25 pm",
  "08:30 pm",
  "08:35 pm",
  "08:40 pm",
  "08:45 pm",
  "08:50 pm",
  "08:55 pm",
  "09:00 pm",
  "09:05 pm",
  "09:10 pm",
  "09:15 pm",
  "09:20 pm",
  "09:25 pm",
  "09:30 pm",
  "09:35 pm",
  "09:40 pm",
  "09:45 pm",
  "09:50 pm",
  "09:55 pm",
  "10:00 pm",
  "10:05 pm",
  "10:10 pm",
  "10:15 pm",
  "10:20 pm",
  "10:25 pm",
  "10:30 pm",
  "10:35 pm",
  "10:40 pm",
  "10:45 pm",
  "10:50 pm",
  "10:55 pm",
  "11:00 pm",
  "11:05 pm",
  "11:10 pm",
  "11:15 pm",
  "11:20 pm",
  "11:25 pm",
  "11:30 pm",
  "11:35 pm",
  "11:40 pm",
  "11:45 pm",
  "11:50 pm",
  "11:55 pm",
]
`;

exports[`prop: interval renders 10-minute intervals 1`] = `
Array [
  "12:00 am",
  "12:10 am",
  "12:20 am",
  "12:30 am",
  "12:40 am",
  "12:50 am",
  "01:00 am",
  "01:10 am",
  "01:20 am",
  "01:30 am",
  "01:40 am",
  "01:50 am",
  "02:00 am",
  "02:10 am",
  "02:20 am",
  "02:30 am",
  "02:40 am",
  "02:50 am",
  "03:00 am",
  "03:10 am",
  "03:20 am",
  "03:30 am",
  "03:40 am",
  "03:50 am",
  "04:00 am",
  "04:10 am",
  "04:20 am",
  "04:30 am",
  "04:40 am",
  "04:50 am",
  "05:00 am",
  "05:10 am",
  "05:20 am",
  "05:30 am",
  "05:40 am",
  "05:50 am",
  "06:00 am",
  "06:10 am",
  "06:20 am",
  "06:30 am",
  "06:40 am",
  "06:50 am",
  "07:00 am",
  "07:10 am",
  "07:20 am",
  "07:30 am",
  "07:40 am",
  "07:50 am",
  "08:00 am",
  "08:10 am",
  "08:20 am",
  "08:30 am",
  "08:40 am",
  "08:50 am",
  "09:00 am",
  "09:10 am",
  "09:20 am",
  "09:30 am",
  "09:40 am",
  "09:50 am",
  "10:00 am",
  "10:10 am",
  "10:20 am",
  "10:30 am",
  "10:40 am",
  "10:50 am",
  "11:00 am",
  "11:10 am",
  "11:20 am",
  "11:30 am",
  "11:40 am",
  "11:50 am",
  "12:00 pm",
  "12:10 pm",
  "12:20 pm",
  "12:30 pm",
  "12:40 pm",
  "12:50 pm",
  "01:00 pm",
  "01:10 pm",
  "01:20 pm",
  "01:30 pm",
  "01:40 pm",
  "01:50 pm",
  "02:00 pm",
  "02:10 pm",
  "02:20 pm",
  "02:30 pm",
  "02:40 pm",
  "02:50 pm",
  "03:00 pm",
  "03:10 pm",
  "03:20 pm",
  "03:30 pm",
  "03:40 pm",
  "03:50 pm",
  "04:00 pm",
  "04:10 pm",
  "04:20 pm",
  "04:30 pm",
  "04:40 pm",
  "04:50 pm",
  "05:00 pm",
  "05:10 pm",
  "05:20 pm",
  "05:30 pm",
  "05:40 pm",
  "05:50 pm",
  "06:00 pm",
  "06:10 pm",
  "06:20 pm",
  "06:30 pm",
  "06:40 pm",
  "06:50 pm",
  "07:00 pm",
  "07:10 pm",
  "07:20 pm",
  "07:30 pm",
  "07:40 pm",
  "07:50 pm",
  "08:00 pm",
  "08:10 pm",
  "08:20 pm",
  "08:30 pm",
  "08:40 pm",
  "08:50 pm",
  "09:00 pm",
  "09:10 pm",
  "09:20 pm",
  "09:30 pm",
  "09:40 pm",
  "09:50 pm",
  "10:00 pm",
  "10:10 pm",
  "10:20 pm",
  "10:30 pm",
  "10:40 pm",
  "10:50 pm",
  "11:00 pm",
  "11:10 pm",
  "11:20 pm",
  "11:30 pm",
  "11:40 pm",
  "11:50 pm",
]
`;

exports[`prop: interval renders 15-minute intervals 1`] = `
Array [
  "12:00 am",
  "12:15 am",
  "12:30 am",
  "12:45 am",
  "01:00 am",
  "01:15 am",
  "01:30 am",
  "01:45 am",
  "02:00 am",
  "02:15 am",
  "02:30 am",
  "02:45 am",
  "03:00 am",
  "03:15 am",
  "03:30 am",
  "03:45 am",
  "04:00 am",
  "04:15 am",
  "04:30 am",
  "04:45 am",
  "05:00 am",
  "05:15 am",
  "05:30 am",
  "05:45 am",
  "06:00 am",
  "06:15 am",
  "06:30 am",
  "06:45 am",
  "07:00 am",
  "07:15 am",
  "07:30 am",
  "07:45 am",
  "08:00 am",
  "08:15 am",
  "08:30 am",
  "08:45 am",
  "09:00 am",
  "09:15 am",
  "09:30 am",
  "09:45 am",
  "10:00 am",
  "10:15 am",
  "10:30 am",
  "10:45 am",
  "11:00 am",
  "11:15 am",
  "11:30 am",
  "11:45 am",
  "12:00 pm",
  "12:15 pm",
  "12:30 pm",
  "12:45 pm",
  "01:00 pm",
  "01:15 pm",
  "01:30 pm",
  "01:45 pm",
  "02:00 pm",
  "02:15 pm",
  "02:30 pm",
  "02:45 pm",
  "03:00 pm",
  "03:15 pm",
  "03:30 pm",
  "03:45 pm",
  "04:00 pm",
  "04:15 pm",
  "04:30 pm",
  "04:45 pm",
  "05:00 pm",
  "05:15 pm",
  "05:30 pm",
  "05:45 pm",
  "06:00 pm",
  "06:15 pm",
  "06:30 pm",
  "06:45 pm",
  "07:00 pm",
  "07:15 pm",
  "07:30 pm",
  "07:45 pm",
  "08:00 pm",
  "08:15 pm",
  "08:30 pm",
  "08:45 pm",
  "09:00 pm",
  "09:15 pm",
  "09:30 pm",
  "09:45 pm",
  "10:00 pm",
  "10:15 pm",
  "10:30 pm",
  "10:45 pm",
  "11:00 pm",
  "11:15 pm",
  "11:30 pm",
  "11:45 pm",
]
`;

exports[`prop: interval renders 30-minute intervals 1`] = `
Array [
  "12:00 am",
  "12:30 am",
  "01:00 am",
  "01:30 am",
  "02:00 am",
  "02:30 am",
  "03:00 am",
  "03:30 am",
  "04:00 am",
  "04:30 am",
  "05:00 am",
  "05:30 am",
  "06:00 am",
  "06:30 am",
  "07:00 am",
  "07:30 am",
  "08:00 am",
  "08:30 am",
  "09:00 am",
  "09:30 am",
  "10:00 am",
  "10:30 am",
  "11:00 am",
  "11:30 am",
  "12:00 pm",
  "12:30 pm",
  "01:00 pm",
  "01:30 pm",
  "02:00 pm",
  "02:30 pm",
  "03:00 pm",
  "03:30 pm",
  "04:00 pm",
  "04:30 pm",
  "05:00 pm",
  "05:30 pm",
  "06:00 pm",
  "06:30 pm",
  "07:00 pm",
  "07:30 pm",
  "08:00 pm",
  "08:30 pm",
  "09:00 pm",
  "09:30 pm",
  "10:00 pm",
  "10:30 pm",
  "11:00 pm",
  "11:30 pm",
]
`;
